# checklight

./: .gitignore  CMakeLists.txt  Doxyfile  FindFreetype.cmake  LICENSE  README.md  vk_layer_settings.txt
assets/models/: checklight.mtl
assets/shader/: basic.frag  basic.vert  blit.frag  ray-gen.glsl  ray-hit.glsl  ray-miss.glsl  screen.vert  text.frag  world.vert
cmake/: FindFreetype.cmake  ShaderBuild.cmake
lib/: vk_format_info.hpp  vk_mem_alloc.cpp
shader/: atlas.frag  blit.frag  blit.vert  blur.frag  denoise.frag  denoise2.frag  denoisecommon.glsl  raycommon.glsl  scene.glsl  screen.vert  shadow.rmiss  text.frag  trace.rchit  trace.rgen  trace.rmiss  world.vert
src/: const.hpp  external.hpp  main.cpp  test.cpp
src/engine/: board.cpp  board.hpp  boardManager.cpp  boardManager.hpp  camera.cpp  camera.hpp  engine.hpp  entity.cpp  entity.hpp  gameObject.cpp  gameObject.hpp  meshObject.cpp  meshObject.hpp  pawnTree.cpp  pawnTree.hpp  scene.cpp  scene.hpp  sceneInputListener.cpp  sceneInputListener.hpp  sceneManager.cpp  sceneManager.hpp  spatialObject.cpp  spatialObject.hpp  trait.hpp
src/engine/data/: collider.cpp  collider.h  collider.hpp  material.hpp  models.cpp  models.hpp  phisicsSurface.hpp
src/engine/entity/: component.cpp  component.hpp  context.cpp  context.hpp  entity.cpp  entity.hpp  pawn.cpp  pawn.hpp
src/engine/entity/component/: camera.cpp  camera.hpp  game.cpp  game.hpp  gameComponent.cpp  gameComponent.hpp  matrixAnimation.cpp  matrixAnimation.hpp  physics.cpp  physics.hpp  render.cpp  render.hpp  renderComponent.cpp  renderComponent.hpp  sound.cpp  sound.hpp  ui.cpp  ui.hpp  uiComponent.cpp  uiComponent.hpp
src/engine/entity/pawns/: rootPawn.cpp  rootPawn.hpp  spatialPawn.cpp  spatialPawn.hpp  surfacePawn.cpp  surfacePawn.hpp
src/gui/: context.cpp  context.hpp  gui.hpp  navigator.cpp  navigator.hpp  overlay.cpp  overlay.hpp  theme.cpp  theme.hpp  widget.cpp  widget.hpp
src/gui/debug/: render.cpp  render.hpp
src/gui/layout/: channel.hpp  display.hpp  flow.hpp  lerps.hpp  property.hpp  radius.hpp  sided.hpp  sizing.hpp  state.hpp  unit.cpp  unit.hpp
src/gui/theme/: auto.cpp  auto.hpp  dark.cpp  dark.hpp  light.cpp  light.hpp  wrap.cpp  wrap.hpp
src/gui/widget/: button.cpp  button.hpp  field.cpp  field.hpp  grid.cpp  grid.hpp  image.cpp  image.hpp  input.cpp  input.hpp  panel.cpp  panel.hpp  root.cpp  root.hpp  select.cpp  select.hpp  slider.cpp  slider.hpp  text.cpp  text.hpp
src/input/: README.md  debug.cpp  debug.hpp  dispatcher.cpp  dispatcher.hpp  event.cpp  event.hpp  icon.cpp  icon.hpp  input.hpp  listener.hpp  result.hpp
src/input/event/: button.cpp  button.hpp  close.cpp  close.hpp  coded.cpp  coded.hpp  frame.cpp  frame.hpp  keyboard.cpp  keyboard.hpp  mouse.cpp  mouse.hpp  positioned.cpp  positioned.hpp  resize.cpp  resize.hpp  scroll.cpp  scroll.hpp  unicode.cpp  unicode.hpp
src/physics/: PhysicsElement.cpp  PhysicsElement.hpp  PhysicsEngine.cpp  PhysicsEngine.hpp  physics.hpp  physicsElement.hpp  physicsEngine.cpp  physicsEngine.hpp
src/render/: application.cpp  application.hpp  frame.cpp  frame.hpp  immediate.cpp  immediate.hpp  parameters.cpp  parameters.hpp  render.hpp  renderer.cpp  renderer.hpp  system.cpp  system.hpp  window.cpp  window.hpp
src/render/api/: commander.cpp  commander.hpp  importer.cpp  importer.hpp  mesh.cpp  mesh.hpp  model.cpp  model.hpp  object.cpp  object.hpp  reusable.cpp  reusable.hpp  vertex.cpp  vertex.hpp
src/render/asset/: asset.cpp  asset.hpp  atlas.cpp  atlas.hpp  font.cpp  font.hpp  importer.cpp  importer.hpp  light.cpp  light.hpp  material.cpp  material.hpp  obj.cpp  obj.hpp  sprite.cpp  sprite.hpp
src/render/draw/: alignment.hpp  arc.hpp  channel.cpp  channel.hpp  color.cpp  color.hpp  text.cpp  text.hpp
src/render/model/: importer.cpp  importer.hpp  material.cpp  material.hpp  obj.cpp  obj.hpp
src/render/vulkan/: allocator.cpp  allocator.hpp  attachment.cpp  attachment.hpp  binding.cpp  binding.hpp  buffer.cpp  buffer.hpp  command.cpp  command.hpp  compiler.cpp  compiler.hpp  device.cpp  device.hpp  family.cpp  family.hpp  fence.cpp  fence.hpp  framebuffer.cpp  framebuffer.hpp  image.cpp  image.hpp  memory.cpp  memory.hpp  operation.hpp  proxy.cpp  proxy.hpp  queue.cpp  queue.hpp  recorder.cpp  recorder.hpp  semaphore.hpp  shader.cpp  shader.hpp  submitter.cpp  submitter.hpp  swapchain.cpp  swapchain.hpp  texture.cpp  texture.hpp
src/render/vulkan/buffer/: attachment.cpp  attachment.hpp  buffer.cpp  buffer.hpp  image.cpp  image.hpp  query.cpp  query.hpp  texture.cpp  texture.hpp
src/render/vulkan/command/: barrier.cpp  barrier.hpp  buffer.cpp  buffer.hpp  recorder.cpp  recorder.hpp  submitter.cpp  submitter.hpp
src/render/vulkan/descriptor/: descriptor.cpp  descriptor.hpp  layout.cpp  layout.hpp  pool.cpp  pool.hpp  push.cpp  push.hpp  vertex.cpp  vertex.hpp
src/render/vulkan/pass/: attachment.cpp  attachment.hpp  dependency.cpp  dependency.hpp  graphics.cpp  graphics.hpp  operation.cpp  operation.hpp  pipeline.cpp  pipeline.hpp  raytrace.cpp  raytrace.hpp  render.cpp  render.hpp  subpass.cpp  subpass.hpp  tracer.cpp  tracer.hpp
src/render/vulkan/raytrace/: config.cpp  config.hpp  entry.cpp  entry.hpp  factory.cpp  factory.hpp  instance.cpp  instance.hpp  struct.cpp  struct.hpp
src/render/vulkan/setup/: allocator.cpp  allocator.hpp  debug.cpp  debug.hpp  device.cpp  device.hpp  family.cpp  family.hpp  framebuffer.cpp  framebuffer.hpp  instance.cpp  proxy.cpp  (+6 more)
src/shared/: args.cpp  args.hpp  box.cpp  box.hpp  ease.cpp  ease.hpp  file.cpp  file.hpp  logger.cpp  logger.hpp  math.cpp  math.hpp  queue.cpp  singleton.hpp  timer.hpp  trait.hpp  unicode.cpp  unicode.hpp  weighed.hpp
src/shared/thread/: mailbox.cpp  mailbox.hpp  phased.cpp  phased.hpp  pool.cpp  pool.hpp  task.cpp  task.hpp
src/sound/: clip.cpp  clip.hpp  debug.cpp  debug.hpp  functions.hpp  group.cpp  group.hpp  listener.cpp  listener.hpp  manager.cpp  manager.hpp  sound.cpp  sound.hpp  sound_manager.cpp  sound_manager.hpp  source.cpp  source.hpp
src/util/: obj.cpp  obj.hpp  queue.cpp  queue.hpp
(+11 files in other folders)
